Change promo texts

--- a/app/views/posts/_to_be_continue.haml
+++ b/app/views/posts/_to_be_continue.haml
@@ -8,10 +8,10 @@
         .vk-crop
           #vk_bottom_group.vk-group-widget
       .twitter-subscribe
-        = twitter_subscribe('insomnis_story')
+        = twitter_subscribe
 
     .share
       .vk-share
         #vk_bottom_like
       .twitter-share
-        = twitter_share('insomnis_story', root_url, 'Инсомнис — книга в виде блога')
+        = twitter_share
