--- a/app/views/shared/_meta.haml
+++ b/app/views/shared/_meta.haml
@@ -1,7 +1,7 @@
-%meta( name="description" content="Инсомнис — книга в формате блога. Герой из научно-фантастического мира пишет дневник прямо по ходу развития событий, прислушиваясь и отвечая на ваши комментарии." )
-%meta( name="keywords" content="Инсомнис, Insomnis, блог, книга, научная фантастика, бессонница" )
+%meta( name="description" content="Инсомнис — блог из другого мира. В отличии от книги вы можете общаться с героем прямо по ходу развития событий." )
+%meta( name="keywords" content="Инсомнис, Insomnis, блог, книга, научная фантастика, бессонница, инквизиция, марс" )
 
-%meta( name='og:title' content="Инсомнис — книга в формате блога" )
-%meta( name='og:description' content="Герой из научно-фантастического мира пишет дневник прямо по ходу развития событий, прислушиваясь и отвечая на ваши комментарии." )
+%meta( name='og:title' content="Инсомнис — блог из другого мира" )
+%meta( name='og:description' content="2028 год. Эпидемия пришла к людям и они потеряли надежду. Дьявол соблазняет людей и инквизиция карает невиновных." )
 %meta( name='og:image' content="#{ root_url + 'logo.png' }" )
 %meta( name='og:url' content="#{ root_url }" )
