--- a/app/views/shared/_meta.haml
+++ b/app/views/shared/_meta.haml
@@ -3,5 +3,5 @@
 
 %meta( name='og:title' content="Инсомнис — блог из другого мира" )
 %meta( name='og:description' content="2028 год. Эпидемия пришла к людям и они потеряли надежду. Дьявол соблазняет людей и инквизиция карает невиновных." )
-%meta( name='og:image' content="#{ root_url + 'logo.png' }" )
+%meta( name='og:image' content="#{ root_url + 'title.jpg' }" )
 %meta( name='og:url' content="#{ root_url }" )
