--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -106,7 +106,8 @@ body.full .post-page
     position: absolute
     +rotate(-90deg)
     top: 35px
-    left: -5px
+    left: 0
+    font-size: 14px
   li
     float: left
     margin-right: 10px
