--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -97,16 +97,16 @@ body.full .post-page
     background: #666
 
 .post-page .post-links
-  padding: 5px 0 10px (80px - 15px)
+  margin: -3px 0 10px (80px - 15px)
   list-style: none
   display: inline-block
-  width: 100%
+  width: 760px - 80px + 15px
   position: relative
   h6
     position: absolute
     +rotate(-90deg)
-    top: 35px
-    left: 0
+    top: 30px
+    left: -65px
     font-size: 14px
   li
     float: left
@@ -114,24 +114,35 @@ body.full .post-page
     width: 190px
   a
     display: block
-    padding: 10px 15px
+    padding: 7px 15px 10px 15px
     background: white
     +shadow
     color: black
     text-decoration: none
     position: relative
-    overflow: hidden
+    border-top: 5px solid black
+    +transition(top, 150ms)
     &:hover
+      top: 5px
       .title
         text-decoration: none
+  .crop
+    position: absolute
+    top: -24px
+    left: 15px
+    width: 15px
+    height: 19px
+    overflow: hidden
+    +box-shadow(rgba(0, 0, 0, 0.15) 3px 0px 2px -2px)
   .corner
+    position: absolute
     background: black
+    +shadow
+    +rotate(45deg)
     width: 30px
     height: 30px
-    position: absolute
-    top: -18px
-    left: -18px
-    +rotate(45deg)
+    top: 10px
+    left: 0
   .title
     font-size: 18px
     margin-bottom: 7px
