try to fix VK share description

--- a/app/views/shared/_meta.haml
+++ b/app/views/shared/_meta.haml
@@ -2,6 +2,6 @@
 %meta( name="keywords" content="Инсомнис, Insomnis, блог, книга, научная фантастика, бессонница, инквизиция, марс" )
 
 %meta( name='og:title' content="Инсомнис — блог из другого мира" )
-%meta( name='og:description' content="2028 год. Эпидемия пришла к людям и они потеряли надежду. Дьявол соблазняет людей и инквизиция карает невиновных." )
+%meta( name='og:description' content="2028. Пришла эпидемия и люди потеряли надежду. Дьявол соблазняет людей и инквизиция карает невиновных." )
 %meta( name='og:image' content="#{ root_url + 'social.jpg' }" )
 %meta( name='og:url' content="#{ root_url }" )
