Move first mdash before paragraph

--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -25,6 +25,8 @@ body.full .post-page
   position: relative
   p
     padding: 6px 0
+    &.mdash-first:first-letter
+      margin-left: -17px
 
 .post-page .date-badge, .post-page .draft-badge
   position: absolute
