--- a/app/views/posts/wiki.haml
+++ b/app/views/posts/wiki.haml
@@ -5,10 +5,11 @@
 .center
   %article.wiki-page
     .auth
-      .text
-        В соответствии с «Актом защиты Интернета от терроризма и педофилии»
-        анонимное редактирование Википедии запрещено. Войдите с помощью
-        своего цифрового паспорта.
+      .crop
+        .text
+          В соответствии с «Актом защиты Интернета от терроризма и педофилии»
+          анонимное редактирование Википедии запрещено. Войдите с помощью
+          своего цифрового паспорта.
       .locker
     .edit
       [<a href="#">править</a>]
