--- a/app/assets/stylesheets/core/controls.css.sass
+++ b/app/assets/stylesheets/core/controls.css.sass
@@ -11,3 +11,7 @@
     +box-shadow(white 0 0 0 3px, rgba(0, 0, 0, 0.4) 0 0 6px 3px)
   &:active
     +box-shadow(white 0 0 0 3px, rgba(0, 0, 0, 0.5) 0 0 2px 3px)
+
+::-moz-selection, ::selection
+  background: $red
+  color: white
