Add time to autopublish for draft posts

--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -52,6 +52,11 @@ body.full .post-page
     right: -9px
     +rotate(25deg)
 
+.post-page .will-be-published
+  font-size: 13px
+  color: #777
+  margin: -10px 0 4px 0
+
 .post-page .draft-badge
   top: -1px
   .text
