Add tracker to page with simple layout

--- a/app/views/layouts/simple.html.haml
+++ b/app/views/layouts/simple.html.haml
@@ -5,5 +5,8 @@
     = favicon_link_tag
     = enable_html5_for_ie
     = yield :head
+    = include_jquery
+    = airbrake_javascript_notifier
+    = javascript_include_tag :tracker, type: nil
   %body
     = yield
