Move wiki to fake_internet controller

--- a/app/views/fake_internet/wiki.haml
+++ b/app/views/fake_internet/wiki.haml
@@ -21,4 +21,4 @@
     %footer
       В соответствии с «Актом против пропаганды пиратства» бесплатный
       просмотр Википедии запрещён. Вы должны оплатить доступ к полной версии
-      статье.
+      статьи.
