Fix prev/next arrows font

--- a/app/assets/stylesheets/core/common.css.sass
+++ b/app/assets/stylesheets/core/common.css.sass
@@ -11,7 +11,7 @@ body, input, textarea
   background: white
   color: black
   font-size: 16px
-  font-family: 'PT Sans', sans-serif
+  font-family: 'PT Sans', Arial, sans-serif
 
 a:active, a:focus
   outline: none
