--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -62,6 +62,7 @@ $top-menu: sprite-map("top-menu/*.png")
       line-height: 20px
       width: 17px
       font-size: 20px
+      font-family: 'Trebuchet MS'
       text-decoration: none
       text-align: center
       &.waiting, &.waiting:hover
