Restyle author comments

--- a/app/assets/stylesheets/pages/comment.css.sass
+++ b/app/assets/stylesheets/pages/comment.css.sass
@@ -9,8 +9,9 @@ article.comment
     font-weight: bold
     font-size: 12px
     position: absolute
-    top: -17px
-    left: 10px
+    top: 48px
+    left: -33px
+    +rotate(-90deg)
   p
     padding-bottom: 7px
   .info
