Add italic to comment motivation in feed

--- a/app/views/posts/feed.atom.haml
+++ b/app/views/posts/feed.atom.haml
@@ -38,7 +38,7 @@
                 - wiki = entry.wikis[link.wiki_page]
                 = wiki.html
 
-            %p
+            %p( style="font-style: italic" )
               = random_comment_motivation_prefix
               %a{ href: root + entry.url }
                 = random_comment_motivation_postfix
