Typo in sayandrelax

--- a/app/views/fake_internet/speakandrelax.html.haml
+++ b/app/views/fake_internet/speakandrelax.html.haml
@@ -14,7 +14,7 @@
     %p
       Вы <strong>запутались</strong>?
     %p
-      Не можете <strong>разобраться</strong> со своей жизнь?
+      Не можете <strong>разобраться</strong> со своей жизнью?
     %p
       Воспользуйтесь <strong>опытом</strong> ваших родителей,
       обогащённым современными <strong>технологиями</strong>!
